--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rafa e Nádia 💙</title>
+  <title>Rafa e Mo 💙</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Rafa & Nádia</h1>
+    <h1>Rafa & Mo</h1>
     <p>Uma história que o destino escreveu com carinho 💌</p>
   </header>
 
@@ -20,9 +20,11 @@
 
     <section id="musica">
       <h2>Nossa Música 🎶</h2>
-      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6Zdu3mSM61XcOuw2aVpGLZ?utm_source=generator" 
-        width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture"
-        loading="lazy"></iframe>
+      <iframe width="100%" height="315" 
+        src="https://www.youtube.com/embed/tricJyqIJro?si=qJjVXsim9eJWeYdd" 
+        title="Cantada Boba - Jorge & Mateus" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        allowfullscreen></iframe>
       <p><em>"Cantada Boba" — Jorge & Mateus</em></p>
     </section>
 
@@ -45,15 +47,20 @@
     </section>
 
     <section id="mensagem">
-      <h2>Uma Mensagem Para Você, Benzinho 💖</h2>
+      <h2>Uma Mensagem Para Você, Amor 💖</h2>
       <p>
-        Nádia, minha linda... cada momento com você é um presente. Você é luz, é força, é doçura. E se o mundo inteiro tentasse nos afastar, ainda assim eu escolheria você, mil vezes.
+        Mo, cada momento com você é um presente. Você é luz, é força, é doçura.  
+        A distância é um mero detalhe que nunca nos impediu, apenas fez mostrar o quanto nosso amor,
+        é forte e único.
+      </p>
+      <p>
+        Esse é o meu bom dia diferente pra você que tanto merece. 🌅💙
       </p>
     </section>
   </main>
 
   <footer>
-    <p>Feito com 💙 por Rafa para Nádia | 2025</p>
+    <p>Feito com 💙 por Rafa para Mo | 2025</p>
   </footer>
 </body>
 </html>
